tests/failing/fun2.tail
let v1:S(int,5) = 5 in
let v2:S(int,3) = 3 in
i2d(subi(v1,v2))
